gitops/namespaces/base/traefik/traefik/dashboard_ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefikdashboard
  namespace: traefik
spec:
  routes:
  - match: Host(`traefik.k8s.rabbito.tech`) && (PathPrefix(`/api`) || PathPrefix(`/dashboard`))
    kind: Rule
    services:
    - name: api@internal
      kind: TraefikService
    middlewares:
    - name: internal
    - name: traefik-forward-auth@kubernetescrd
  tls:
    secretName: rabbito-tech-tls
